navbar hiding (z-index) fixed

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -7,7 +7,7 @@ html, body {
   }
 
 nav{
-  z-index: -1;
+  z-index: 1;
 }
 
 // .sidebar{
